--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,9 @@
 {
   "framework": "nextjs",
   "buildCommand": "npm run build",
-  "installCommand": "npm install"
+  "installCommand": "npm install",
+  "crons": [{
+    "path": "/api/refresh",
+    "schedule": "*/30 * * * *"
+  }]
 }
