--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@types/leaflet.heat": "^0.2.5",
+    "@upstash/redis": "^1.36.1",
     "date-fns": "^3.0.0",
     "leaflet": "^1.9.4",
     "leaflet.heat": "^0.2.0",
