fix: remove cron job for hobby tier compatibility
Cron jobs require Vercel Pro plan. Removed auto-refresh cron.
Users can manually refresh by visiting /api/refresh

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,5 @@
 {
   "framework": "nextjs",
   "buildCommand": "npm run build",
-  "installCommand": "npm install",
-  "crons": [{
-    "path": "/api/refresh",
-    "schedule": "*/30 * * * *"
-  }]
+  "installCommand": "npm install"
 }
